--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,35189],[],[[4,0,5,[6],[1,265,11022],[]],[7,0,8,[],[1,11289,9881],[]],[9,0,10,[],[1,21171,14015],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,72873],[],[[4,0,5,[6],[1,273,15600],[]],[7,0,8,[],[1,15875,15014],[]],[9,0,10,[],[1,30891,11014],[]],[11,0,12,[],[1,41907,30962],[]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Working POC","*C:\\Users\\yoges\\Robot_framework_project\\Working_POC.robot","*Working_POC.robot","*Verify Successful Login to OrangeHRM","*<p>This test case verifies that user is able to successfully Login to OrangeHRM\x3c/p>","*Smoke","*Unsuccessful Login with invalid Username","*<p>Test Login with an invalid username\x3c/p>","*Logout Test","*<p>Verify that a user can log out successfully\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Working POC","*C:\\Users\\yoges\\Robot_framework_project\\Working_POC.robot","*Working_POC.robot","*Verify Successful Login to OrangeHRM","*<p>This test case verifies that user is able to successfully Login to OrangeHRM\x3c/p>","*Smoke","*Unsuccessful Login with invalid Username","*<p>Test Login with an invalid username\x3c/p>","*Unsuccessful Login with invalid Password","*<p>Test Login with an invalid password\x3c/p>","*Logout Test","*<p>Verify that a user can log out successfully\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:35","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:11","fail":0,"label":"Smoke","pass":1,"skip":0}],[{"elapsed":"00:00:35","fail":0,"id":"s1","label":"Working POC","name":"Working POC","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:13","fail":0,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:16","fail":0,"label":"Smoke","pass":1,"skip":0}],[{"elapsed":"00:01:13","fail":0,"id":"s1","label":"Working POC","name":"Working POC","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1730712132039;
+window.output["baseMillis"] = 1730716011926;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 35230;
+window.output["generated"] = 72896;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
