--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,72873],[],[[4,0,5,[6],[1,273,15600],[]],[7,0,8,[],[1,15875,15014],[]],[9,0,10,[],[1,30891,11014],[]],[11,0,12,[],[1,41907,30962],[]]],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,2843],[],[[4,0,5,[],[0,262,2557,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Working POC","*C:\\Users\\yoges\\Robot_framework_project\\Working_POC.robot","*Working_POC.robot","*Verify Successful Login to OrangeHRM","*<p>This test case verifies that user is able to successfully Login to OrangeHRM\x3c/p>","*Smoke","*Unsuccessful Login with invalid Username","*<p>Test Login with an invalid username\x3c/p>","*Unsuccessful Login with invalid Password","*<p>Test Login with an invalid password\x3c/p>","*Logout Test","*<p>Verify that a user can log out successfully\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Control For loop","*C:\\Users\\yoges\\Robot_framework_project\\Control_For_loop.robot","*Control_For_loop.robot","*Login with multiple users","*<p>This test logs in multiple users and checks for the title\x3c/p>","*No keyword with name 'Get From List' found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:13","fail":0,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:16","fail":0,"label":"Smoke","pass":1,"skip":0}],[{"elapsed":"00:01:13","fail":0,"id":"s1","label":"Working POC","name":"Working POC","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Control For loop","name":"Control For loop","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1730716011926;
+window.output["baseMillis"] = 1730725802759;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 72896;
+window.output["generated"] = 2993;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
